<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.greetingcard.ui.firstwindow.SettingFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.firstwindow.SettingFragment">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{() -> viewmodel.onBackgroundClick()}"
            android:scaleType="centerCrop"
            tools:src="@drawable/background_snow" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textSize="14sp"
            android:inputType="text"
            android:ems="10"
            android:padding="5dp"
            android:background="@drawable/style_textedit"
            android:text="@={viewmodel.name}"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textSize="14sp"
            android:inputType="text"
            android:ems="10"
            android:padding="5dp"
            android:background="@drawable/style_textedit"
            android:text="@={viewmodel.title}"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/textTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/text"
            app:layout_constraintStart_toStartOf="@+id/titleEditText"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

        <EditText
            android:id="@+id/textEditView"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:textSize="14sp"
            android:inputType="text"
            android:ems="10"
            android:padding="5dp"
            android:text="@={viewmodel.text}"
            android:background="@drawable/style_textedit"
            app:layout_constraintStart_toStartOf="@+id/textTextView"
            app:layout_constraintTop_toBottomOf="@+id/textTextView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="113dp"
            android:layout_height="115dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/avatar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameEditText"
            app:layout_constraintTop_toTopOf="@+id/nameTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/style_test_btn"
            android:onClick="@{() -> viewmodel.onTestButtonClick()}"
            android:text="@string/setting_btn_test"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditView" />

        <androidx.appcompat.widget.AppCompatButton
            android:onClick="@{() -> viewmodel.onLaunchButtonClick()}"
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="14dp"
            android:text="@string/setting_btn_launch"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/style_launch_btn"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/previousIconBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="@{() -> viewmodel.onPreviousBtnClick()}"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/iconImage"
            app:layout_constraintEnd_toStartOf="@+id/iconImage"
            app:layout_constraintTop_toTopOf="@+id/iconImage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nextIconBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="@{() -> viewmodel.onNextBtnClick()}"
            android:src="@drawable/arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/iconImage"
            app:layout_constraintStart_toEndOf="@id/iconImage"
            app:layout_constraintTop_toTopOf="@+id/iconImage" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iconImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/fjb4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>